corrected productView main art shifted right

--- a/src/components/product-view/productView.css
+++ b/src/components/product-view/productView.css
@@ -111,7 +111,6 @@ span {
  {
   .container {
     height: auto;
-    margin-left: 2rem;
   }
   .container img {
    height: auto;
@@ -132,7 +131,6 @@ span {
 @media (max-width: 1280px) and (orientation: portrait) {
     .container {
         height: auto;
-   
     }
 }
 
